[package]
name = "lsm-kv-store"
version = "0.1.0"
edition = "2024"
autobenches = false

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
rand = "0.8"

[[test]]
name = "throughput"
path = "benches/throughput.rs"
